<?xml version="1.0"?>
<package>
  <name>lasmile_gazebo</name>
  <version>0.0.0</version>
  <description>The lasmile_gazebo package</description>

  <maintainer email="xmsun@bu.edu">Xinmiao Sun</maintainer>

  <license>BSD</license>

  <author email="xmsun@bu.edu">Xinmiao Sun</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>lasmile_description</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>lasmile_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  
  <export> </export>
</package>
